<resources>
    <string name="app_name">My App Portfolio</string>

    <string name="title">My Nanodegree Apps!</string>
    <string name="action_settings">Settings</string>

    <string name="app1">Spotify streamer</string>
    <string name="app2">Scores app</string>
    <string name="app3">Library app</string>
    <string name="app4">Build it bigger</string>
    <string name="app5">Zyz reader</string>
    <string name="my_own_app">Capstone: My own app</string>

    <string name="snackbar_text">This button will launch: %s</string>

</resources>
