<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/coordinatorLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_gravity="center"
        android:background="@color/background"
        tools:context=".MainActivity">

        <android.support.v7.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:background="@color/lime_500" />

        <TextView
            android:id="@+id/title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/toolbar"
            android:layout_marginBottom="@dimen/activity_vertical_margin"
            android:layout_marginTop="@dimen/activity_vertical_margin"
            android:gravity="center"
            android:text="@string/title"
            android:textSize="22sp" />

        <Button
            android:id="@+id/button1"
            style="@style/custom_button_style"
            android:layout_below="@id/title"
            android:text="@string/app1" />

        <Button
            android:id="@+id/button2"
            style="@style/custom_button_style"
            android:layout_below="@id/button1"
            android:text="@string/app2" />

        <Button
            android:id="@+id/button3"
            style="@style/custom_button_style"
            android:layout_below="@id/button2"
            android:text="@string/app3" />

        <Button
            android:id="@+id/button4"
            style="@style/custom_button_style"
            android:layout_below="@id/button3"
            android:text="@string/app4" />

        <Button
            android:id="@+id/button5"
            style="@style/custom_button_style"
            android:layout_below="@id/button4"
            android:text="@string/app5" />

        <Button
            android:id="@+id/button6"
            style="@style/custom_button_style"
            android:layout_below="@id/button5"
            android:text="@string/my_own_app" />

    </RelativeLayout>

</android.support.design.widget.CoordinatorLayout>
